--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "harambeecore-frontend",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
- "dependencies": {
-  "axios": "^1.6.8",
-  "react": "^19.1.0",
-  "react-dom": "^19.1.0",
- }
+  "dependencies": {
+    "axios": "^1.6.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.1",
-    "vite": "^4.5.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^7.0.5"
   }
 }
