--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^7.0.5"
+  "@vitejs/plugin-react": "^4.0.0",
+  "vite": "^7.0.5",
+  "tailwindcss": "^3.4.1",
+  "postcss": "^8.4.21",
+  "autoprefixer": "^10.4.14"
+}
+
   }
 }
