--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "framer-motion": "^11.18.2",
-    "lucide-react": "^0.365.0"
+    "lucide-react": "^0.365.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
