--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "harambeecore-frontend",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "framer-motion": "^11.18.2",
-    "lucide-react": "^0.365.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.365.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^7.0.5"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.2.0"
   }
 }
