--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "harambeecore-frontend",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-  "axios": "^1.6.8",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "framer-motion": "^11.18.2",
-  "lucide-react": "^0.365.0",
-  "tailwindcss": "^3.4.1",
-  "postcss": "^8.4.33",
-  "autoprefixer": "^10.4.17"
-}
-  },
-  "devDependencies": {
-    "vite": "^5.2.0",
+    "axios": "^1.6.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "framer-motion": "^11.18.2",
+    "lucide-react": "^0.365.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.33",
     "autoprefixer": "^10.4.17"
