--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.365.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17"
+    "autoprefixer": "^10.4.17",
+    "vite": "^5.2.0"
   }
 }
